# pap

./: .gitignore  Makefile  README.md  metadata.tex
01-intro/: Makefile.def  Makefile.mk  content.tex  course-intro.tex  evaluation.tex  main.tex  prof.tex  resources.tex  slides.tex
02-fundcap/: Makefile.def  Makefile.mk  amdahl.tex  benchmarks.tex  content.tex  gustaffson.tex  intro.tex  main.tex  paralelismo.tex  perf-eval.tex  perf-metrics.tex  seq.tex  slides.tex  tlp-alt.tkz
03-copymove/: Makefile.def  Makefile.mk  constr.tex  content.tex  copia.tex  destruct.tex  main.tex  move.tex  slides.tex  vector.tex
04-memmgmt/: Makefile.def  Makefile.mk  content.tex  evolvector.tex  main.tex  slides.tex  smartptr.tex
06-generic/: Makefile.def  Makefile.mk  content.tex  intro.tex  lambda.tex  main.tex  proggen.tex  slides.tex  variadic.tex
07-stl/: .cont-intro.tex.swp  Makefile.def  Makefile.mk  algo-intro.tex  algo-mod.tex  algo-nomod.tex  cont-access.tex  cont-constr.tex  cont-intro.tex  cont-iter.tex  cont-mod.tex  cont-others.tex  cont-size.tex  content.tex  main.tex  slides.tex
08-libs/: Makefile.def  Makefile.mk  content.tex  gtest.tex  header-comp-time.tex  lib-org.tex  lib-types.tex  main.tex  slides.tex
08-libs/examples/vector2/utest/: CMakeLists.txt
10-conc/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  slides.tex  thread.tex
11-sincr/: Makefile.def  Makefile.mk  condvar.tex  content.tex  futuros.tex  main.tex  mutex.tex  shared-lock.tex  slides.tex  util-mutex.tex
12-atomic/: Makefile.def  Makefile.mk  atomics.tex  barriers-ej.tkz  (+13 more)
(+93 files in other folders)
